--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# turn off the spring banner
+spring.main.banner-mode=off
 
+# database connections
+spring.datasource.url=jdbc:mysql://localhost/login_api_spring_boot
+spring.datasource.username=root
+spring.datasource.password=root
+spring.flyway.repair=true
+
+# show database sql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
