add key to applications.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.flyway.repair=true
 # show database sql
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# jwt secret key
+# getting from environment variable
+api.security.token.secret=${JWT_SECRET:$2a$12$kLkbgtPyOZPGZiQoig/Dxuw.GMRahDzTUFw98qW1gVB1TItmFsgYG}
