implements token genereation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.flyway.repair=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# disable stacktrace
+server.error.include-stacktrace=never
+
 # jwt secret key
 # getting from environment variable
 api.security.token.secret=${JWT_SECRET:$2a$12$kLkbgtPyOZPGZiQoig/Dxuw.GMRahDzTUFw98qW1gVB1TItmFsgYG}
